test png transfer completed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,16 +7,19 @@ set(TEST_SOURCE_FILES test/test_client.h test/test_client.c test/test_transfer.h
 
 # libraries paths
 set(NETWORKING_PATH /Users/michzio/Developer/MyProjects/BachelorDegree/c/networking)
+set(COMMON_FUNCTIONS_PATH /Users/michzio/Developer/MyProjects/BachelorDegree/c/common)
 set(COMPARERS_PATH /Users/michzio/Developer/MyProjects/BachelorDegree/c/comparers)
 set(UNIT_TESTS_PATH /Users/michzio/Developer/MyProjects/BachelorDegree/c/unit_tests)
 
 add_library(RC_Client_Lib SHARED ${SOURCE_FILES})
 set_target_properties(RC_Client_Lib PROPERTIES OUTPUT_NAME rc_client_shared)
 target_link_libraries(RC_Client_Lib ${NETWORKING_PATH}/libnetworking.a)
+target_link_libraries(RC_Client_Lib ${COMMON_FUNCTIONS_PATH}/libcommon_functions.a)
 
 add_library(RC_Client_Lib_Static ${SOURCE_FILES})
 set_target_properties(RC_Client_Lib_Static PROPERTIES OUTPUT_NAME rc_client)
 target_link_libraries(RC_Client_Lib_Static ${NETWORKING_PATH}/libnetworking.a)
+target_link_libraries(RC_Client_Lib_Static ${COMMON_FUNCTIONS_PATH}/libcommon_functions.a)
 
 add_executable(RemoteControllerAPI_Client main.c ${TEST_SOURCE_FILES})
 target_link_libraries(RemoteControllerAPI_Client RC_Client_Lib_Static)
